--- a/client_side/src/Components/Home/Home.scss
+++ b/client_side/src/Components/Home/Home.scss
@@ -147,6 +147,7 @@ header {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-family: Contrail;
 
     h2 {
         font-size: 60px;
