--- a/client_side/src/Components/Navbar/Navbar.scss
+++ b/client_side/src/Components/Navbar/Navbar.scss
@@ -91,8 +91,8 @@
     aside {
         display: none;
         position: fixed;
-        width: 60%;
-        right: 0;
+        width: 100%;
+        left:0 ;
         top: 0;
         height: 100dvh;
         background-color: #6c4177;
