--- a/client_side/src/Components/Footer/Footer.scss
+++ b/client_side/src/Components/Footer/Footer.scss
@@ -121,6 +121,13 @@
         .made-by {
             font-size: 20px;
             opacity: 0.7;
+
+            span {
+                a {
+                    color: #ffe662;
+                    text-decoration: none;
+                }
+            }
         }
 
         .social-media {
