--- a/client_side/src/index.css
+++ b/client_side/src/index.css
@@ -49,6 +49,9 @@ html {
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden !important;
+}
 
 @media screen and (max-width:900px) {
 
@@ -56,6 +59,8 @@ html {
   body::-webkit-scrollbar {
     display: none;
   }
+
+  
 
   /* Hide scrollbar for IE, Edge and Firefox */
   body {
