--- a/client_side/src/Components/Services/Services.scss
+++ b/client_side/src/Components/Services/Services.scss
@@ -93,6 +93,7 @@
                 hr {
                     border: 2px solid #fff;
                     width: 100%;
+                    margin-bottom: 50px;
                 }
 
                 .range-price {
