--- a/client_side/src/Components/Home/Home.scss
+++ b/client_side/src/Components/Home/Home.scss
@@ -940,7 +940,7 @@ header {
     -ms-transition: all 0.3s ease;
     -o-transition: all 0.3s ease;
     -webkit-filter: drop-shadow(1px 1px 0 #fff) drop-shadow(-1px -1px 0 white);
-    filter: drop-shadow(1px 1px 0 #fff) drop-shadow(-1px -1px 0 white);
+    filter: drop-shadow(1px 1px 20px #fff) drop-shadow(-1px -1px 0 white);
     &:hover {
         color: #fff;
     }
