--- a/client_side/src/Components/Navbar/Navbar.scss
+++ b/client_side/src/Components/Navbar/Navbar.scss
@@ -18,6 +18,7 @@
     padding: 30px 0px;
     background-color: #e4e4e4;
     position: relative;
+    z-index: 20;
 
     @media screen and (max-width: 900px) {
         display: none;
@@ -83,6 +84,7 @@
     padding: 30px 0px;
     background-color: #e4e4e4;
     position: relative;
+
 
     @media screen and (min-width: 900px) {
         display: none;
