--- a/client_side/src/Components/Reservation/Reservation.scss
+++ b/client_side/src/Components/Reservation/Reservation.scss
@@ -22,6 +22,105 @@
         margin: 100px 0;
         display: flex;
         justify-content: center;
+
+        .products-table {
+            .rwd-table {
+                margin: 1em 0;
+                min-width: 300px; // adjust to your needs
+
+                tr {
+                    border-top: 1px solid #ddd;
+                    border-bottom: 1px solid #ddd;
+                }
+
+                th {
+                    display: none; // for accessibility, use a visually hidden method here instead! Thanks, reddit!
+                }
+
+                td {
+                    display: block;
+
+                    &:first-child {
+                        padding-top: 0.5em;
+                    }
+                    &:last-child {
+                        padding-bottom: 0.5em;
+                    }
+
+                    &:before {
+                        content: attr(data-th) ": "; // who knew you could do this? The internet, that's who.
+                        font-weight: bold;
+
+                        // optional stuff to make it look nicer
+                        width: 6.5em; // magic number :( adjust according to your own content
+                        display: inline-block;
+                        // end options
+
+                        @media (min-width: 900px) {
+                            display: none;
+                        }
+                    }
+                }
+
+                th,
+                td {
+                    text-align: left;
+
+                    @media (min-width: 900px) {
+                        display: table-cell;
+                        padding: 0.25em 0.5em;
+
+                        &:first-child {
+                            padding-left: 0;
+                        }
+
+                        &:last-child {
+                            padding-right: 0;
+                        }
+                    }
+                }
+            }
+
+            .rwd-table {
+                background-color: #fff;
+                color: #6c4177;
+                border-radius: 0.9em;
+                overflow: hidden;
+                border: 2px solid #6c4177;
+                max-height: 500px;
+                min-height: 200px;
+
+                .delete {
+                    color: #6c4177;
+                    font-size: 30px;
+                    cursor: pointer;
+                }
+
+                tr {
+                    border-color: lighten(#34495e, 10%);
+                    &:nth-child(1) {
+                        border-bottom: 2px solid #6c4177;
+                        margin: auto;
+                        width: 90%;
+                    }
+                }
+                th,
+                td {
+                    font-size: 22px;
+                    margin: 0.5em 1em;
+                    text-align: center;
+                    @media (min-width: 900px) {
+                        padding: 1em !important;
+                    }
+                }
+                th,
+                td:before {
+                    color: #6c4177;
+                    font-size: 30px;
+                }
+            }
+        }
+
         form {
             display: flex;
             justify-content: center;
@@ -35,7 +134,7 @@
             input::placeholder,
             textarea::placeholder {
                 font-size: 25px;
-                color: #6c4177;
+                color: #6c41778b;
                 font-family: Contrail;
             }
 
@@ -52,17 +151,98 @@
                 color: #6c4177;
             }
 
-            select {
-                width: 80%;
-                height: 50px;
+            a {
+                display: flex;
+                justify-self: center;
+                align-items: center;
+                text-align: center;
+                text-decoration: none;
+
+                height: 60px;
                 background-color: #fff;
                 border-radius: 10px;
                 border: 2px solid #6c4177;
                 color: #6c4177;
+                padding: 0px 50px;
+                font-family: Contrail;
+                font-size: 25px;
+                color: #6c4177;
+                cursor: pointer;
+                transition: all 0.3s ease;
+
+                &:hover {
+                    transform: scale(0.97);
+                }
+            }
+
+            .disabled {
+                opacity: 0.5;
+                filter: grayscale(100%);
+                pointer-events: none;
+            }
+
+            select {
+                width: 100%;
+                height: 60px;
+
+                -webkit-appearance: none;
+            }
+
+            .select {
+                position: relative;
+                display: inline-block;
+                margin-bottom: 15px;
+                width: 80%;
+            }
+
+            .select select {
+                display: inline-block;
+                width: 100%;
+                cursor: pointer;
+                padding: 20px 15px;
+                outline: 0;
+                border-radius: 10px;
+                background-color: #fff;
+                border: 2px solid #6c4177;
                 padding: 5px;
                 font-family: Contrail;
                 font-size: 25px;
                 color: #6c4177;
+                appearance: none;
+                -webkit-appearance: none;
+                -moz-appearance: none;
+            }
+            .select select::-ms-expand {
+                display: none;
+            }
+            .select select:hover,
+            .select select:focus {
+                color: #000000;
+                background: #cccccc;
+            }
+            .select select:disabled {
+                opacity: 0.5;
+                pointer-events: none;
+            }
+            .select_arrow {
+                position: absolute;
+                top: 12px;
+                right: 55px;
+                width: 14px;
+                height: 14px;
+                border: solid #6c4177;
+                border-width: 0 2px 2px 0;
+                display: inline-block;
+                padding: 3px;
+                transform: rotate(45deg);
+                -webkit-transform: rotate(45deg);
+            }
+            .select select:hover ~ .select_arrow,
+            .select select:focus ~ .select_arrow {
+                border-color: #000000;
+            }
+            .select select:disabled ~ .select_arrow {
+                border-top-color: #cccccc;
             }
 
             textarea {
