--- a/client_side/src/Components/Services/Services.scss
+++ b/client_side/src/Components/Services/Services.scss
@@ -226,8 +226,10 @@
             }
 
             .products-container {
-                display: grid;
-                grid-template-columns: auto auto auto;
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;
+                flex-wrap: wrap ;
                 gap: 20px;
                 width: 100%;
 
@@ -266,6 +268,7 @@
                     font-family: Contrail;
                     max-width: 300px;
                     min-width: 200px;
+                    flex: 30%;
                     img {
                         width: 100%;
                         height: 200px;
@@ -309,7 +312,7 @@
     justify-content: center;
     align-items: center;
     gap: 10px;
-    margin-top: 20px;
+    margin: 20px 0;
 
     button {
         padding: 10px;
