--- a/client_side/src/Components/Packs/Packs.scss
+++ b/client_side/src/Components/Packs/Packs.scss
@@ -90,6 +90,8 @@
                 flex-basis: 30%;
                 width: auto;
                 height: auto;
+                min-height: 1000px;
+                max-height: 1000px;
                 background-color: #6c4177;
                 font-family: Contrail;
                 border-radius: 20px;
