--- a/client_side/src/Components/About/About.scss
+++ b/client_side/src/Components/About/About.scss
@@ -1,114 +1,115 @@
-header {
-    width: 100%;
-    height: 80dvh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/public/Images_public/Carousel/8.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-
-    h2 {
-        font-size: 80px;
-    }
-
-    p {
-        opacity: 0.7;
-        font-size: 40px;
-        span {
-            color: #6c4177;
-        }
-    }
-
-    .scroll-downs {
-        width: 34px;
-        height: 55px;
-    }
-    .mousey {
-        width: 5px;
-        padding: 10px 15px;
-        height: 35px;
-        border: 2px solid #fff;
-        border-radius: 25px;
-        opacity: 0.75;
-        box-sizing: content-box;
-    }
-    .scroller {
-        width: 5px;
-        height: 10px;
-        border-radius: 25%;
-        background-color: #fff;
-        animation-name: scroll;
-        animation-duration: 2.2s;
-        animation-timing-function: cubic-bezier(0.15, 0.41, 0.69, 0.94);
-        animation-iteration-count: infinite;
-    }
-    @keyframes scroll {
-        0% {
-            opacity: 0;
-        }
-        10% {
-            transform: translateY(0);
-            opacity: 1;
-        }
-        100% {
-            transform: translateY(15px);
-            opacity: 0;
-        }
-    }
-}
-
-section {
-    margin: 100px 0;
-
-    .sec-section {
+#about {
+    header {
+        width: 100%;
+        height: 80dvh;
         display: flex;
-        justify-content: flex-start;
-        align-items: center;
         flex-direction: column;
-        background-color: #7e53896d;
-        margin: 20px;
-        padding: 20px;
-        gap: 20px;
-        font-family: Contrail;
+        align-items: center;
+        justify-content: center;
+        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/public/Images_public/Carousel/8.jpg);
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-attachment: scroll;
 
         h2 {
-            background-color: #6c4177;
-            font-size: 50px;
-            padding: 10px;
-            margin: 20px 0;
+            font-size: 80px;
         }
 
-        .a-propos-cont {
-            display: flex;
-            justify-content: space-around;
-            align-items: center;
-            flex-direction: row;
-            background-color: #CFB1D7;
-            padding: 20px ;
-            margin: 20px;
+        p {
+            opacity: 0.7;
+            font-size: 40px;
+            span {
+                color: #6c4177;
+            }
+        }
 
-            img {
-                width: 400px;
-                height: 400px;
-                object-fit: cover;
-                border-radius: 50%;
-                border: 4px solid #6c4177;
+        .scroll-downs {
+            width: 34px;
+            height: 55px;
+        }
+        .mousey {
+            width: 5px;
+            padding: 10px 15px;
+            height: 35px;
+            border: 2px solid #fff;
+            border-radius: 25px;
+            opacity: 0.75;
+            box-sizing: content-box;
+        }
+        .scroller {
+            width: 5px;
+            height: 10px;
+            border-radius: 25%;
+            background-color: #fff;
+            animation-name: scroll;
+            animation-duration: 2.2s;
+            animation-timing-function: cubic-bezier(0.15, 0.41, 0.69, 0.94);
+            animation-iteration-count: infinite;
+        }
+        @keyframes scroll {
+            0% {
+                opacity: 0;
+            }
+            10% {
+                transform: translateY(0);
+                opacity: 1;
+            }
+            100% {
+                transform: translateY(15px);
+                opacity: 0;
+            }
+        }
+    }
+
+    section {
+        margin: 100px 0;
+
+        .sec-section {
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            flex-direction: column;
+            background-color: #7e53896d;
+            margin: 20px;
+            padding: 20px;
+            gap: 20px;
+            font-family: Contrail;
+
+            h2 {
+                background-color: #6c4177;
+                font-size: 50px;
+                padding: 10px;
+                margin: 20px 0;
             }
 
-            .text-cont {
-                width: 50%;
-                color: #000;
+            .a-propos-cont {
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                flex-direction: row;
+                background-color: #cfb1d7;
+                padding: 20px;
+                margin: 20px;
 
-
-                h3 {
-                    font-size: 40px;
+                img {
+                    width: 400px;
+                    height: 400px;
+                    object-fit: cover;
+                    border-radius: 50%;
+                    border: 4px solid #6c4177;
                 }
 
-                p {
-                    font-size: 20px;
+                .text-cont {
+                    width: 50%;
+                    color: #000;
+
+                    h3 {
+                        font-size: 40px;
+                    }
+
+                    p {
+                        font-size: 20px;
+                    }
                 }
             }
         }
