--- a/client_side/src/Components/Contact/Contact.scss
+++ b/client_side/src/Components/Contact/Contact.scss
@@ -1,80 +1,184 @@
-header {
-    .swiper {
-        width: 100%;
-        height: 80vh;
-        color: #000;
+#contact {
+    header {
+        .swiper {
+            width: 100%;
+            height: 80vh;
+            color: #000;
 
-        @media screen and (max-width: 900px) {
+            @media screen and (max-width: 900px) {
+                height: 100dvh;
+            }
+        }
+
+        .swiper-slide {
+            text-align: center;
+            font-size: 18px;
+            background: #fff;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .swiper-slide img {
+            display: block;
+            width: 100%;
+            height: 100%;
+            -o-object-fit: cover;
+            object-fit: cover;
+        }
+
+        .carousel-swiper {
+            .swiper-container {
+                background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./Images_public/Carousel/8.jpg);
+                background-size: cover;
+                background-clip: border-box;
+                background-position: center;
+                background-attachment: scroll;
+                background-repeat: no-repeat;
+            }
+
+            .swiper-container:nth-child(2) {
+                background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+                    url(./Images_public/Carousel/Image1Slide.jpg);
+            }
+
+            .swiper-container:nth-child(2) {
+                background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+                    url(./Images_public/Carousel/Image1Slide.jpg);
+            }
+        }
+
+        .swiper-button-prev {
+            color: #fff !important;
+            z-index: 6;
+            display: none;
+        }
+
+        .swiper-button-next {
+            color: #fff !important;
+            z-index: 6;
+            display: none;
+        }
+
+        .header-text {
+            position: absolute;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
             height: 100dvh;
+            width: 100%;
+            z-index: 5;
+
+            h1 {
+                font-size: 80px;
+                color: #fff;
+
+                span {
+                    color: #b06fc0;
+                }
+
+                @media screen and (max-width: 900px) {
+                    font-size: 40px;
+                }
+            }
+
+            h3 {
+                color: #fff;
+                font-size: 40px;
+                opacity: 0.8;
+
+                @media screen and (max-width: 900px) {
+                    font-size: 30px;
+                }
+            }
+
+            button {
+                border: none;
+                font-family: Dand;
+                font-size: 40px;
+                margin-top: 30px;
+                -webkit-appearance: none;
+                background: -webkit-gradient(to right, #6c4177 0%, #c07cd2 50%, #cfb1d7 100%);
+                background: linear-gradient(to right, #6c4177 0%, #c07cd2 50%, #cfb1d7 100%);
+                background-size: 500%;
+                border-radius: 5rem;
+                box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+                color: #fff;
+                cursor: pointer;
+                -webkit-font-smoothing: antialiased;
+                -moz-osx-font-smoothing: grayscale;
+                height: 5rem;
+                letter-spacing: 0.05em;
+                outline: none;
+                -webkit-tap-highlight-color: transparent;
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -ms-user-select: none;
+                user-select: none;
+                width: 20rem;
+
+                &:hover {
+                    animation-name: gradient;
+                    -webkit-animation-name: gradient;
+                    animation-duration: 2s;
+                    -webkit-animation-duration: s;
+                    animation-iteration-count: 1;
+                    -webkit-animation-iteration-count: 1;
+                    animation-fill-mode: forwards;
+                    -webkit-animation-fill-mode: forwards;
+                }
+
+                @-webkit-keyframes gradient {
+                    0% {
+                        background-position: 0% 50%;
+                    }
+
+                    50% {
+                        background-position: 100%;
+                    }
+
+                    100% {
+                        background-position: 20%;
+                    }
+                }
+
+                @keyframes gradient {
+                    0% {
+                        background-position: 0% 50%;
+                    }
+
+                    50% {
+                        background-position: 100%;
+                    }
+
+                    100% {
+                        background-position: 20%;
+                    }
+                }
+
+                @media screen and (max-width: 900px) {
+                    font-size: 20px;
+                    padding: 15px 40px;
+                    margin-top: 10px;
+                }
+            }
         }
     }
 
-    .swiper-slide {
-        text-align: center;
-        font-size: 18px;
-        background: #fff;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .swiper-slide img {
-        display: block;
-        width: 100%;
-        height: 100%;
-        -o-object-fit: cover;
-        object-fit: cover;
-    }
-
-    .carousel-swiper {
-        .swiper-container {
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(./Images_public/Carousel/8.jpg);
-            background-size: cover;
-            background-clip: border-box;
-            background-position: center;
-            background-attachment: scroll;
-            background-repeat: no-repeat;
-        }
-
-        .swiper-container:nth-child(2) {
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-                url(./Images_public/Carousel/Image1Slide.jpg);
-        }
-
-        .swiper-container:nth-child(2) {
-            background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-                url(./Images_public/Carousel/Image1Slide.jpg);
-        }
-    }
-
-    .swiper-button-prev {
-        color: #fff !important;
-        z-index: 6;
-        display: none;
-    }
-
-    .swiper-button-next {
-        color: #fff !important;
-        z-index: 6;
-        display: none;
-    }
-
-    .header-text {
-        position: absolute;
+    .loc {
         display: flex;
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        height: 100dvh;
-        width: 100%;
-        z-index: 5;
+        padding: 50px 0px;
 
-        h1 {
-            font-size: 80px;
-            color: #fff;
+        h2 {
+            font-size: 60px;
+            color: #000;
 
             span {
-                color: #b06fc0;
+                color: #6c4177;
             }
 
             @media screen and (max-width: 900px) {
@@ -82,180 +186,80 @@ header {
             }
         }
 
-        h3 {
-            color: #fff;
-            font-size: 40px;
-            opacity: 0.8;
-
-            @media screen and (max-width: 900px) {
-                font-size: 30px;
-            }
-        }
-
-        button {
-            border: none;
-            font-family: Dand;
-            font-size: 40px;
-            margin-top: 30px;
-            -webkit-appearance: none;
-            background: -webkit-gradient(to right, #6c4177 0%, #c07cd2 50%, #cfb1d7 100%);
-            background: linear-gradient(to right, #6c4177 0%, #c07cd2 50%, #cfb1d7 100%);
-            background-size: 500%;
-            border-radius: 5rem;
-            box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
-            color: #fff;
-            cursor: pointer;
-            -webkit-font-smoothing: antialiased;
-            -moz-osx-font-smoothing: grayscale;
-            height: 5rem;
-            letter-spacing: 0.05em;
-            outline: none;
-            -webkit-tap-highlight-color: transparent;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            width: 20rem;
-
-            &:hover {
-                animation-name: gradient;
-                -webkit-animation-name: gradient;
-                animation-duration: 2s;
-                -webkit-animation-duration: s;
-                animation-iteration-count: 1;
-                -webkit-animation-iteration-count: 1;
-                animation-fill-mode: forwards;
-                -webkit-animation-fill-mode: forwards;
-            }
-
-            @-webkit-keyframes gradient {
-                0% {
-                    background-position: 0% 50%;
-                }
-
-                50% {
-                    background-position: 100%;
-                }
-
-                100% {
-                    background-position: 20%;
-                }
-            }
-
-            @keyframes gradient {
-                0% {
-                    background-position: 0% 50%;
-                }
-
-                50% {
-                    background-position: 100%;
-                }
-
-                100% {
-                    background-position: 20%;
-                }
-            }
-
-            @media screen and (max-width: 900px) {
-                font-size: 20px;
-                padding: 15px 40px;
-                margin-top: 10px;
-            }
-        }
-    }
-}
-
-.loc {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    padding: 50px 0px;
-
-    h2 {
-        font-size: 60px;
-        color: #000;
-
-        span {
-            color: #6c4177;
-        }
-
-        @media screen and (max-width: 900px) {
-            font-size: 40px;
+        iframe {
+            width: 80%;
+            // border: 8px solid #6c4177 !important;
+            box-shadow: 0 0 30px 4px #6c4177;
         }
     }
 
-    iframe {
-        width: 80%;
-        // border: 8px solid #6c4177 !important;
-        box-shadow: 0 0 30px 4px #6c4177;
-    }
-}
-
-.conta {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 40px;
-
-    .sing {
-        width: 300px;
-        height: 240px;
-        position: relative;
+    .conta {
         display: flex;
         justify-content: center;
-        align-items: flex-start;
+        align-items: center;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 40px;
 
-        .cycle-top {
-            background-color: #6c4177;
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
+        .sing {
+            width: 300px;
+            height: 240px;
+            position: relative;
             display: flex;
             justify-content: center;
-            align-items: center;
-            position: absolute;
-            top: -40px;
-            font-size: 40px;
-            transition: all 0.3s ease;
-        }
+            align-items: flex-start;
+            text-decoration: none;
+            color: #fff;
 
-        .body {
-            background-color: #6c4177;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            padding: 20px;
-            width: 100%;
-            height: 100%;
-            border-radius: 30%;
-            text-align: center;
-            cursor: pointer;
-            transition: all 0.3s ease;
-
-            h3 {
-                font-size: 50px;
-            }
-
-            h5 {
-                font-size: 28px;
-            }
-        }
-
-        &:hover {
             .cycle-top {
-                opacity: 0;
-                top: 40px;
+                background-color: #6c4177;
+                width: 80px;
+                height: 80px;
+                border-radius: 50%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                position: absolute;
+                top: -40px;
+                font-size: 40px;
+                transition: all 0.3s ease;
             }
 
             .body {
-                transform: scale(1.1);
-                background-color: #fff;
-                color: #000;
-                box-shadow: 0 0 10px -2px #fff;
+                background-color: #6c4177;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                padding: 20px;
+                width: 100%;
+                height: 100%;
+                border-radius: 30%;
+                text-align: center;
+                cursor: pointer;
+                transition: all 0.3s ease;
+
+                h3 {
+                    font-size: 50px;
+                }
+
+                h5 {
+                    font-size: 28px;
+                }
+            }
+
+            &:hover {
+                .cycle-top {
+                    opacity: 0;
+                    top: 40px;
+                }
+
+                .body {
+                    transform: scale(1.1);
+                    background-color: #fff;
+                    color: #000;
+                    box-shadow: 0 0 10px -2px #fff;
+                }
             }
         }
     }
