--- a/client_side/src/Components/Home/Home.scss
+++ b/client_side/src/Components/Home/Home.scss
@@ -618,6 +618,11 @@
     }
 
     .carousel-swiper2 {
+
+        @media screen and (max-width: 900px) {
+            display: none;
+        }
+
         .swiper-container {
             background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(108, 65, 119, 0.7)),
                 url(./Images_public/Home/Carousel/SwiperMiddle.jpg);
