--- a/client_side/src/Components/Packs/Packs.scss
+++ b/client_side/src/Components/Packs/Packs.scss
@@ -71,6 +71,13 @@
             flex-wrap: wrap;
             margin: 50px 0;
 
+            @media screen and (max-width: 900px) {
+                h2 {
+                    text-align: center;
+                    font-size: 60px;
+                }
+            }
+
             h2 {
                 font-size: 80px;
                 span {
@@ -87,6 +94,11 @@
                 gap: 20px;
                 margin: 50px 0;
 
+                @media screen and (max-width: 900px) {
+                    flex-direction: column;
+                    flex-wrap: nowrap;
+                }
+
                 .pack {
                     flex-basis: 30%;
                     width: auto;
@@ -96,6 +108,15 @@
                     background-color: #6c4177;
                     font-family: Contrail;
                     border-radius: 20px;
+
+                    @media screen and (max-width: 900px) {
+                        flex-basis: 80%;
+                        height: auto;
+                        min-height: 300px;
+                        max-height: auto;
+                        width: 80%;
+                        width: 80%;
+                    }
 
                     img {
                         width: 100%;
