--- a/client_side/src/Components/Home/Home.scss
+++ b/client_side/src/Components/Home/Home.scss
@@ -80,7 +80,8 @@
                 }
 
                 @media screen and (max-width: 900px) {
-                    font-size: 40px;
+                    font-size: 50px;
+                    text-align: center;
                 }
             }
 
@@ -90,7 +91,7 @@
                 opacity: 0.8;
 
                 @media screen and (max-width: 900px) {
-                    font-size: 30px;
+                    font-size: 28px;
                 }
             }
 
@@ -159,7 +160,7 @@
                 }
 
                 @media screen and (max-width: 900px) {
-                    font-size: 20px;
+                    font-size: 28px;
                     padding: 15px 40px;
                     margin-top: 10px;
                 }
