Responsive fix and ever

--- a/client_side/src/Components/Footer/Footer.scss
+++ b/client_side/src/Components/Footer/Footer.scss
@@ -25,6 +25,12 @@
 
             @media screen and (max-width: 900px) {
                 width: 100%;
+
+                text-align: center;
+
+                hr {
+                    margin: auto;
+                }
             }
 
             h2 {
@@ -50,6 +56,12 @@
             color: #6c4177;
             @media screen and (max-width: 900px) {
                 width: 100%;
+
+                text-align: center;
+
+                hr {
+                    margin: auto;
+                }
             }
 
             h2 {
