--- a/client_side/src/Components/About/About.scss
+++ b/client_side/src/Components/About/About.scss
@@ -19,6 +19,8 @@
 
         h2 {
             font-size: 80px;
+            text-align: center;
+
 
             @media screen and (max-width: 900px) {
                 text-align: center;
@@ -29,12 +31,13 @@
         p {
             opacity: 0.7;
             font-size: 40px;
+            text-align: center;
+
             span {
                 color: #6c4177;
             }
 
             @media screen and (max-width: 900px) {
-                text-align: center;
                 font-size: 30px;
             }
         }
@@ -42,6 +45,7 @@
         .scroll-downs {
             width: 34px;
             height: 55px;
+            margin: auto;
         }
         .mousey {
             width: 5px;
