--- a/client_side/src/Components/Contact/Contact.scss
+++ b/client_side/src/Components/Contact/Contact.scss
@@ -29,7 +29,8 @@
 
         .carousel-swiper {
             .swiper-container {
-                background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)), url(./Images_public/Contact/waiter-uniform-holding-metal-tray_23-2148245001-vcXFzZpHH-transformed.jpeg);
+                background: linear-gradient(rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.9)),
+                    url(./Images_public/Contact/waiter-uniform-holding-metal-tray_23-2148245001-vcXFzZpHH-transformed.jpeg);
                 background-size: cover;
                 background-clip: border-box;
                 background-position: center;
@@ -200,6 +201,9 @@
         flex-direction: row;
         flex-wrap: wrap;
         gap: 40px;
+        font-family: Contrail;
+        margin-top: 50px;
+        margin-bottom: 200px;
 
         .sing {
             width: 300px;
@@ -210,6 +214,7 @@
             align-items: flex-start;
             text-decoration: none;
             color: #fff;
+            margin-top: 50px;
 
             .cycle-top {
                 background-color: #6c4177;
@@ -259,6 +264,183 @@
                     background-color: #fff;
                     color: #000;
                     box-shadow: 0 0 10px -2px #fff;
+                }
+            }
+        }
+    }
+
+    .contact-footer {
+        padding: 20px;
+        background-color: #6c4177;
+        border-radius: 50px;
+        -webkit-border-radius: 50px;
+        -moz-border-radius: 50px;
+        -ms-border-radius: 50px;
+        -o-border-radius: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 70%;
+        margin: auto;
+        margin-top: 100px;
+        margin-bottom: 100px;
+
+        @media screen and (max-width: 900px) {
+            padding: 30px 0;
+            width: 100%;
+        }
+
+        h2 {
+            text-align: center;
+            font-size: 80px;
+            color: #fff;
+            span {
+                color: #c07cd2;
+            }
+
+            @media screen and (max-width: 900px) {
+                font-size: 40px;
+            }
+        }
+
+        form {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-self: center;
+            margin-top: 50px;
+            width: 600px;
+            gap: 20px;
+
+            @media screen and (max-width: 900px) {
+                width: 100%;
+            }
+
+            .checkbox-container {
+                padding: 20px;
+
+                input {
+                    width: auto;
+                }
+            }
+
+            input,
+            textarea {
+                border: 4px solid #c07cd2;
+                background-color: #fff;
+                color: #6c4177;
+                padding: 20px;
+                border-radius: 50px;
+                -webkit-border-radius: 50px;
+                -moz-border-radius: 50px;
+                -ms-border-radius: 50px;
+                -o-border-radius: 50px;
+
+                @media screen and (max-width: 900px) {
+                    width: 80%;
+                    margin: auto;
+                }
+            }
+
+            input::-webkit-input-placeholder,
+            textarea::-webkit-input-placeholder {
+                font-family: Contrail;
+                font-size: 20px;
+            }
+
+            input::-moz-placeholder,
+            textarea::-moz-placeholder {
+                font-family: Contrail;
+                font-size: 20px;
+            }
+
+            input:-ms-input-placeholder,
+            textarea:-ms-input-placeholder {
+                font-family: Contrail;
+                font-size: 20px;
+            }
+
+            input::-ms-input-placeholder,
+            textarea::-ms-input-placeholder {
+                font-family: Contrail;
+                font-size: 20px;
+            }
+
+            input::placeholder,
+            textarea::placeholder {
+                font-family: Contrail;
+                font-size: 20px;
+            }
+
+            textarea {
+                border-radius: 20px;
+                -webkit-border-radius: 20px;
+                -moz-border-radius: 20px;
+                -ms-border-radius: 20px;
+                -o-border-radius: 20px;
+                resize: none;
+            }
+
+            button {
+                height: 80px;
+                width: 100%;
+                background-color: #fff;
+                color: #6c4177;
+                font-family: Dand;
+                border: none;
+                font-size: 40px;
+                border-radius: 20px;
+                -webkit-border-radius: 20px;
+                -moz-border-radius: 20px;
+                -ms-border-radius: 20px;
+                -o-border-radius: 20px;
+                margin-bottom: 20px;
+                cursor: pointer;
+
+                @media screen and (max-width: 900px) {
+                    width: 80%;
+                    margin: auto;
+                }
+
+                svg {
+                    opacity: 0;
+                    font-size: 20px;
+                    width: auto;
+                    height: auto;
+                    color: #6c4177;
+                    transition: all 0.3s ease;
+                    margin: 0;
+                }
+
+                &:hover {
+                    background-color: #000;
+                    color: #fff;
+
+                    svg {
+                        opacity: 1;
+                        margin: 0 10px 0 30px;
+                        color: #fff;
+                    }
+                }
+            }
+
+            .inputs-name-tel {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                gap: 20px;
+
+                @media screen and (max-width: 900px) {
+                    flex-direction: column;
+                }
+
+                input {
+                    width: 50%;
+
+                    @media screen and (max-width: 900px) {
+                        width: 80%;
+                    }
                 }
             }
         }
