more services fixing

--- a/client_side/src/Components/About/About.scss
+++ b/client_side/src/Components/About/About.scss
@@ -6,7 +6,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(/public/Images_public/Carousel/8.jpg);
+        background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../../../public/Images_public/About/IMG-20230428-WA0032.jpg);
         background-size: cover;
         background-repeat: no-repeat;
         background-attachment: scroll;
