--- a/client_side/src/Components/Services/Services.scss
+++ b/client_side/src/Components/Services/Services.scss
@@ -305,6 +305,15 @@
                                 border: none;
                                 outline: none;
                                 font-size: 20px;
+                                cursor: pointer;
+                                transition: all .3s ease;
+
+                                &:hover {
+                                    background-color: #6c4177;
+                                    color: #fff;
+                                    transform: scale(1.1);
+                                    border-radius: 10px;
+                                }
                             }
                         }
                     }
